// Copyright 2020 Anapaya Systems
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/scionproto/scion/go/pkg/proto/gateway";

package proto.gateway.v1;

message ControlRequest {
    // The gateway control protocol request.
    oneof request {
        // A probe request.
        ProbeRequest probe = 1;
    }
}

message ControlResponse {
    // The gateway control protocol response.
    oneof response {
        // A probe response
        ProbeResponse probe = 1;
    }
}

message ProbeRequest {
    // The session ID that this probe request is associated with.
    uint32 session_id = 1;
    // Arbitrary data that will be reflected in the response.
    bytes data = 2;

}

message ProbeResponse {
    // The session ID that this probe response is associated with.
    uint32 session_id = 1;
    // Arbitrary data that was part of the request.
    bytes data = 2;
}
